--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <link rel="icon" type="image/png" href="assets/img/favicon.ico">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <title>Awesome Landing Page by Creative Tim</title>
+        <title>BestShift</title>
         <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
         <meta name="viewport" content="width=device-width" />
         
@@ -28,13 +28,13 @@
                     <span class="icon-bar bar2"></span>
                     <span class="icon-bar bar3"></span>
                     </button>
-                    <a href="http://www.creative-tim.com">
+                    <a href="http://tgm-hit.github.io/BestShift/">
                         <div class="logo-container">
                             <div class="logo">
                                 <img src="assets/img/new_logo.png" alt="Creative Tim Logo">
                             </div>
                             <div class="brand">
-                                Creative Tim
+                                BestShift
                             </div>
                         </div>
                     </a>
@@ -79,9 +79,11 @@
                         </div>
                         <div class="col-md-6 col-md-offset-1">
                             <div class="description">
-                                <h2>Awesome landing page.</h2>
+                                <h2>Diplomprojekt der Abteilung Informationstechnologie</h2>
                                 <br>
-                                <h5>Be amazed by the best looking bootstrap landing page on the web! Your new app deserves an amazing page to show all of its features. Clear visual, light colours and beautifully aligned elements - they all try to make the users aware of your great app features!</h5>
+                                <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                quis nostrud exercitation ullamco.</h5>
                             </div>
                             <div class="buttons">
                                 <button class="btn btn-fill btn-neutral">
@@ -100,9 +102,9 @@
             </div>
             <div class="section section-gray section-clients">
                 <div class="container text-center">
-                    <h4 class="header-text">Friends in high places</h4>
+                    <h4 class="header-text">Verwendete Software</h4>
                     <p>
-                        Build customer confidence by listing your users! Anyone who has used your service and has been pleased with it should have a place here! From Fortune 500 to start-ups, all your app enthusiasts will be glad to be featured in this section. Moreover, users will feel confident seing someone vouching for your product!<br>
+                        Die folgende Software hat uns dabei geholfen unser Diplomprojekt zu verwirklichen.
                     </p>
                     <div class="logos">
                         <ul class="list-unstyled">
@@ -121,10 +123,15 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="description">
-                                <h4 class="header-text">It's beautiful</h4>
-                                <p>And your app is also probably social, awesome, easy-to-use and vital to users. This is the place to enlist all the good things that your app has to share. Focus on the benefits that the uers will receive. Try to combine imaginery with text and show meaningful printscreens from your app, that will make it clear what exactly the basic functions are. </p>
-                                <p>Try to make it very clear for the people browsing the page that this product will enrich their life and will make a nice addition to the homescreen. 
+                                <h4 class="header-text">It's so pretty</h4>
                                 <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo<br/>
+                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                </p>
                             </div>
                         </div>
                         <div class="col-md-5 col-md-offset-1 hidden-xs">
@@ -159,9 +166,10 @@
                         <div class="col-md-5 col-md-offset-1">
                             <h4 class="header-text">Easy to integrate</h4>
                             <p>
-                                With all the apps that users love! Make it easy for users to share, like, post and tweet their favourite things from the app. Be sure to let users know they continue to remain connected while using your app!
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
                             </p>
-                            <a href="http://www.creative-tim.com/product/awesome-landing-page" id="Demo3" class="btn btn-fill btn-info" data-button="info">Get Free Demo</a>
+                            <a href="http://tgm-hit.github.io/BestShift/" id="Demo3" class="btn btn-fill btn-info" data-button="info">Download</a>
                         </div>
                     </div>
                 </div>
@@ -235,6 +243,15 @@
                                     <h3>"Loving this! Just picked it up the other day. Thank you for the work you put into this."</h3>
                                 </div>
                             </div>
+                            <div class="item">
+                                <div class="mask">
+                                    <img src="assets/img/faces/face-2.jpg">
+                                </div>
+                                <div class="carousel-testimonial-caption">
+                                    <p>Kollegah, Musician</p>
+                                    <h3>"Bruder ur geil alda"</h3>
+                                </div>
+                            </div>
                         </div>
                         <ol class="carousel-indicators carousel-indicators-blue">
                             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -250,9 +267,9 @@
                         <img class ="parallax-background-image" src="assets/img/template/bg3.jpg"/>
                     </div>
                     <div class="info">
-                        <h1>Download this landing page for free!</h1>
-                        <p>Beautiful multipurpose bootstrap landing page.</p>
-                        <a href="http://www.creative-tim.com/product/awesome-landing-page" class="btn btn-neutral btn-lg btn-fill">DOWNLOAD</a>
+                        <h1>Download this app!</h1>
+                        <p>Something something something something something<p>
+                        <a href="http://tgm-hit.github.io/BestShift/" class="btn btn-neutral btn-lg btn-fill">DOWNLOAD</a>
                     </div>
                 </div>
             </div>
@@ -267,12 +284,7 @@
                             </li>
                             <li>
                                 <a href="#">
-                                Company
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                Portfolio
+                                Team
                                 </a>
                             </li>
                             <li>
@@ -294,7 +306,7 @@
                         </a>
                     </div>
                     <div class="copyright">
-                        &copy; 2015 <a href="http://www.creative-tim.com">Creative Tim</a>, made with love
+                        &copy; 2015 <a href="http://tgm-hit.github.io/BestShift/">BestShift Development Team</a>, made with love
                     </div>
                 </div>
             </footer>
